fixed the achievements section

--- a/profile/index1.html
+++ b/profile/index1.html
@@ -50,11 +50,11 @@
             </div>
             <div class="statistics">           
                 <h2>Statistics</h2>
-                <div class="statistic-item">
+                <div id="winnings"   class="statistic-item">
                     <img src="images\flag-checkered-solid 1.svg" alt="wins">
                     <p>46<br>Wins</p>
                 </div>
-                <div class="statistic-item">
+                <div id="gem"   class="statistic-item">
                     <img src="images\Vector.svg" alt="gems">
                     <p>200<br>Gems</p>
                 </div>
@@ -70,6 +70,16 @@
                     <img src="images\Icons (1).svg" alt="preamble pioneer">
                     <h3>Preamble Pioneer</h3>
                     <p>Successfully recited the entire Preamble of the Indian Constitution.</p>
+                </div>
+                <div class="achievement-item">
+                    <img src="images\Icons (2).svg" alt="directive principles scholar">
+                    <h3>Directive Principles Scholar</h3>
+                    <p>Mastered all lessons on Directive Principles of State Policy. </p>
+                </div>
+                <div class="achievement-item">
+                    <img src="images\Icons (3).svg" alt="Constitutional historian">
+                    <h3>Constitutional Historian</h3>
+                    <p>Correctly ordered all events in the Constitutional Timeline Challenge.</p>
                 </div>
             </div>
         </div>
