added language dropdown menu

--- a/constituently/index.html
+++ b/constituently/index.html
@@ -40,7 +40,14 @@
                 <h2>Hi,User!</h2>
                 <p>Begin your exploration of the Constitution now.</p>
                 <div class="info">
-                    <p>EN</p>
+                    <p class="dropdown-toggle">EN</p>
+                    <div class="dropdown-menu">
+                        <p>हिन्दी</p>
+                        <p>தமிழ்</p>
+                        <p>বাংলা</p>
+                        <p>తెలుగు</p>
+                        <p>मराठी</p>
+                    </div>
                     <img src="images/gem-solid (1).svg" alt="">
                     <p>200</p>
                 </div>
